# MortisUtils

./: CMakeLists.txt  CMakeSettings.json  LICENSE  NOTICE  README.md
cmake/: config.cmake  function.cmake  package.cmake
src/: CMakeLists.txt
src/Base/Api/: ConvertString.cpp  ConvertString.hpp  base_api.hpp
src/Base/Concept/: base_concept.hpp
src/Base/Template/: ReflFunc.hpp  Singleton.hpp  StaticHelper.hpp  base_template.hpp
src/Base/Type/: base_types.hpp
src/Containers/BoundedQueue/: bounded_queue.hpp
src/Containers/DLLMaker/: DLLMaker.hpp
src/Containers/PipeExecutor/: PipeExecutor.cpp  PipeExecutor.hpp
src/Containers/ScopeWrapper/: ScopeHandle.hpp  ScopeObfuscator.hpp  ScopeWrapper.hpp
src/Containers/ThreadPool/: ThreadPool.cpp  ThreadPool.hpp
src/ExportHeader/: utils.cpp  utils.hpp
test/build-main/: CMakeLists.txt  main.cpp
test/build-test/: CMakeLists.txt  MoUtilsTest.cpp
